--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "vulkan"
+name = "spock"
 version = "0.1.0"
 authors = ["Nathan Holland <nholland94@gmail.com>"]
 build = "build.rs"
